--- a/mobile_ui.css
+++ b/mobile_ui.css
@@ -59,3 +59,11 @@ box-shadow: 0 2px 4px 0 rgba(0,0,0,0.25);
 .topic-post article {
     border-top: 1px solid #e9e9e9;
 }
+
+
+
+/*Remove extra space between before ad in categories view*/
+
+#list-area {
+    margin-bottom: 20px;
+}
